--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
   @media (max-width: 30rem) { h1 { font-size: 4.5rem; } }
   h1 > span { -webkit-animation: spooky 2s alternate infinite linear; animation: spooky 2s alternate infinite linear; color: #FFDD00; display: inline-block; }
   h2 { color: #e7ebf2; margin-bottom: 0.4em; }
-  h5 { font-size: 70%; }
-  h2 > span, h5 > span { color: #FFDD00; font-size: 200%; -webkit-animation: spookx 2s alternate infinite linear; animation: spookx 2s alternate infinite linear; display: inline-block; }
+  h2 > span { color: #FFDD00; font-size: 200%; -webkit-animation: spookx 2s alternate infinite linear; animation: spookx 2s alternate infinite linear; display: inline-block; }
   @-webkit-keyframes spooky { from { transform: translatey(0.08em) scaley(0.95); } to { transform: translatey(-0.08em); } }
   @keyframes spooky { from { transform: translatey(0.08em) scaley(0.95); } to { transform: translatey(-0.08em); } }
   @-webkit-keyframes spookx { from { transform: translatex(0.08em) scaley(0.95); } to { transform: translatex(-0.08em); } }
   @keyframes spookx { from { transform: translatex(0.08em) scaley(0.95); } to { transform: translatex(-0.08em); } }
 
-  section section { display: flex; align-items: center; gap: 10px; }
-  section section svg { height: 90px; width: 90px; }
+  section section { display: flex; align-items: center; gap: 10px; height: 90px; width: 90px; }
   li span { font-family: 'Roboto Mono', monospace; }
   .about { max-width: 900px; margin: 2rem auto; padding: 1rem; text-align: left; }
   .about p, .about li { color: #e7ebf2; font-size: 1.1rem; margin-bottom: 0.5rem; }
-  .about ul { list-style: none; padding-left: 0; }
-  h5 a:hover { text-decoration: underline; }
   svg { height: 2rem; width: 2rem; }
   @media (max-width: 700px) { 
     body { font-size: 110%; } 
@@ -34,6 +30,5 @@
   <section class="about">
     <p>Please try again after a while.</p>
   </section>
-  <h5><span>GitHub: <a href="https://github.com/V0jcik" target="_blank">V0jcik</a></span></h5>
 </main>
 <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="vojcik" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FFDD00" data-position="Right" data-x_margin="25" data-y_margin="25"></script>
